force-app/main/default/objects/AcctSeed__Billing_Cash_Receipt__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>AcctSeed__Cash_Receipt__r.AcctSeed__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>