force-app/main/default/objects/AcctSeed__Billing_Cash_Receipt__c/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <formula>AcctSeed__Billing__r.AcctSeed__Ledger__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ledger</label>
    <type>Text</type>
</CustomField>