force-app/main/default/objects/AcctSeed__Billing_Cash_Receipt__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>HYPERLINK( &quot;https://midwest.lightning.force.com/lightning/r/Opportunity/&quot; &amp; AcctSeed__Billing__r.AcctSeed__Opportunity__r.Id &amp; &quot;/view&quot;  , AcctSeed__Billing__r.AcctSeed__Opportunity__r.Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>