force-app/main/default/objects/AcctSeed__Billing_Cash_Receipt__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <formula>AcctSeed__Billing__r.AcctSeed__Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>