force-app/main/default/objects/AcctSeed__Billing_Cash_Receipt__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <formula>AcctSeed__Cash_Receipt__r.AcctSeed__Receipt_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>